# freshfleet-sim

./: .gitignore  CLAUDE.md  Dockerfile  README.md  build.sh  docker-compose.yml  ros_entrypoint.sh  seat_mess_taxonomy.md
computer_vision_system/: dataset_prep.ipynb  google_image_collector.py  requirements_cv.txt
src/freshfleet_detection/: CMakeLists.txt  package.xml
src/freshfleet_detection/config/: freshfleet.rviz
src/freshfleet_detection/launch/: freshfleet_sim.launch
src/freshfleet_detection/scripts/: object_detector.py  robot_controller.py
